# technical-task

./: .envrc  .gitignore  .taplo.toml  README.md  TODOS.md  docker-bake.hcl  flake.nix  helmfile.yaml  justfile
.github/workflows/: ci-pull-request.yml  ci-release-tag.yml
charts/: Chart.yaml  values.yaml
charts/charts/greeter/: Chart.yaml  values.yaml
charts/charts/greeter/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  ingressroute.yaml  service.yaml
charts/templates/: _helpers.tpl
containers/: build.compose.yml  dev.compose.yml
containers/greeter/: Dockerfile  README.md
containers/greeter/buildcontext/: .dockerignore  entrypoint.sh  entrypoint_prod.sh  pyproject.toml
containers/greeter/buildcontext/src/greeter/: __main__.py  api.py  env.py  main.py
containers/greeter/buildcontext/tests/greeter/: test_api.py  test_dummy.py  test_env.py
