[project]
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
]
description = "Example greeeter FastAPI app for technical task"
name = "greeter"
readme = "../README.md"
requires-python = ">=3.13"
version = "0.1.1"

[dependency-groups]
dev = [
    "fastapi-cli==0.0.7",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 80"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["./src"]


[tool.coverage.run]
source = ["src"]
